--- a/monad-skeleton.cabal
+++ b/monad-skeleton.cabal
@@ -29,6 +29,7 @@ library
                      , transformers
                      , transformers-compat
                      , exceptions
+                     , mmorph
   hs-source-dirs: src
   ghc-options: -Wall
   default-language:    Haskell2010
